# ccswitch

./: Cargo.toml  README.md  demo.tape
.github/workflows/: release.yml
Formula/: ccswitch.rb
docs/: CNAME  index.html
src/: accounts.rs  config.rs  credentials.rs  main.rs  platform.rs  sequence.rs  transfer.rs  tui.rs  update.rs
