[package]
name = "ccswitch"
version = "0.2.0"
edition = "2021"
description = "Multi-account switcher for Claude Code"
authors = ["Vyshnav S Deepak <vyshnav.s.deepak@gmail.com>"]

[[bin]]
name = "ccswitch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
dirs = "5"
colored = "2"
ratatui = "0.29"
crossterm = "0.28"
rpassword = "7"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
